--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = XinLang_Spider.settings
+default = News_Spider.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = XinLang_Spider
+project = News_Spider
